--- a/dir_2_df.ipynb
+++ b/dir_2_df.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3942/3942 [00:05<00:00, 750.37it/s]\n"
+      "100%|██████████| 3941/3941 [00:04<00:00, 978.50it/s] \n"
      ]
     },
     {
@@ -34,9 +34,9 @@
     }
    ],
    "source": [
-    "folder_path = \"hsbc_raw_site_20250220/datasets/default\"\n",
-    "output_file = \"hsbc_doormats.pickle\"\n",
-    "raw_htmls = []\n",
+    "folder_path = \"transformed_hsbc_site_20250220/datasets/default\"\n",
+    "output_file = \"hsbc_site_20250220.pickle\"\n",
+    "data_rows = []\n",
     "try:\n",
     "    files = os.listdir(folder_path)\n",
     "    for filename in tqdm(files):\n",
@@ -45,8 +45,8 @@
     "                file_path = os.path.join(folder_path, filename)\n",
     "                try:\n",
     "                    with open(file_path, 'r') as f:\n",
-    "                        raw_html = json.load(f)\n",
-    "                    raw_htmls.append(raw_html)\n",
+    "                        data = json.load(f)\n",
+    "                    data_rows.append(data)\n",
     "                except json.JSONDecodeError as e:\n",
     "                    print(f\"Error decoding JSON in file: {filename}. Error: {e}\")\n",
     "        except Exception as e:\n",
@@ -55,8 +55,8 @@
     "    print(f\"Folder not found: {folder_path}\")\n",
     "except Exception as e:\n",
     "    print(f\"An error occurred at: {e}\")\n",
-    "if raw_htmls:\n",
-    "    combined_df = pd.DataFrame(raw_htmls)\n",
+    "if data_rows:\n",
+    "    combined_df = pd.DataFrame(data_rows)\n",
     "    print(\"DataFrame created successfully.\")\n",
     "    combined_df.to_pickle(output_file)\n",
     "else:\n",
