--- a/pdf_downloader.limited.ipynb
+++ b/pdf_downloader.limited.ipynb
@@ -106,7 +106,7 @@
     "files_links=[]\n",
     "for index, row in df.iterrows():\n",
     "    files_links_list = row['files_links']\n",
-    "    category = row['category']\n",
+    "    catalog = row['catalog']\n",
     "    if isinstance(files_links_list, list):\n",
     "        for link in files_links_list:\n",
     "            base_url=extract_base_url(row[\"url\"])\n",
