--- a/pdf_downloader.limited.ipynb
+++ b/pdf_downloader.limited.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,13 @@
     "def extract_base_url(url):\n",
     "    parsed_url:ParseResult = urlparse(url)\n",
     "    base_url = parsed_url.scheme + \"://\" + parsed_url.netloc\n",
-    "    return base_url"
+    "    return base_url\n",
+    "def remove_first_url(url_string:str):\n",
+    "    second_https_start_index = url_string.find(\"https://\", 1) \n",
+    "    if second_https_start_index != -1:\n",
+    "        return url_string[second_https_start_index:]\n",
+    "    else:\n",
+    "        return url_string"
    ]
   },
   {
@@ -111,6 +117,7 @@
     "        for link in files_links_list:\n",
     "            base_url=extract_base_url(row[\"url\"])\n",
     "            full_link = f\"{base_url}{link}\"\n",
+    "            full_link = remove_first_url(full_link)\n",
     "            files_links.append(full_link)\n",
     "unique_links_set = set(files_links)\n",
     "unique_links_list = list(unique_links_set)"
